--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,9 @@
 body {
-  background-color: powderblue;
+  background-color: lightblue;
 }
 h1 {
-  color: blue;
+  color: maroon;
 }
 p {
-  color: red;
+  color: black;
 }
