--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ body, html {
  .box {
     border-style: solid;
     border-color: white ;
-    border-width: 10px;
+    border-width: 1px;
     text-align: left;
     margin-top:2px;
     padding-left:2px;
@@ -43,6 +43,12 @@ body, html {
 
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
+  color: white;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
+}
+.tabcontent1 {
   color: white;
   display: none;
   padding: 100px 20px;
